--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.11",
     "better-sqlite3": "^11.1.2",
+    "busboy": "^1.6.0",
     "drizzle-orm": "^0.32.1",
     "framer-motion": "^11.3.8",
     "lucia": "^3.2.0",
@@ -27,10 +28,12 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
+    "@types/busboy": "^1.5.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
