--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "nuqs": "^1.17.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
