--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@nextui-org/react": "^2.4.6",
     "@node-rs/argon2": "^1.8.3",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.11",
     "better-sqlite3": "^11.1.2",
     "busboy": "^1.6.0",
     "drizzle-orm": "^0.32.1",
     "framer-motion": "^11.3.8",
-    "lucia": "^3.2.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.5",
+    "next": "^14.2.18",
     "next-themes": "^0.3.0",
     "nuqs": "^1.17.8",
     "react": "^18",
