--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@
 .DS_Store
 *.pem
 .vscode
-.sqlite.db
 
 # debug
 npm-debug.log*
@@ -27,6 +26,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -35,3 +35,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# user files
+*.db
+public/users
