--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@oslojs/encoding": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
     "@tanstack/react-query-devtools": "^5.51.11",
-    "better-sqlite3": "^11.1.2",
+    "better-sqlite3": "^11.7.2",
     "busboy": "^1.6.0",
     "drizzle-orm": "^0.38.3",
     "framer-motion": "^11.3.8",
@@ -48,7 +48,9 @@
     "drizzle-kit": "^0.30.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "form-data": "^4.0.1",
     "jsdom": "^25.0.1",
+    "node-mocks-http": "^1.16.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
