--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-next": "14.2.5",
     "form-data": "^4.0.1",
     "jsdom": "^25.0.1",
+    "memfs": "^4.17.0",
     "node-mocks-http": "^1.16.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
