feat(db): generate migrations for db - generate the first migration file for db using 'drizzle-kit generate' command - change the default name for db to 'sqlite.db' - add script for creating a testing database

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "start": "next start",
       "lint": "next lint",
       "test": "vitest",
+      "test:migrate": "set DATABASE_PATH=tests.db && npx drizzle-kit migrate",
       "db:gen": "drizzle-kit generate",
       "db:migrate": "drizzle-kit migrate",
       "db:studio": "drizzle-kit studio"
