--- a/package.json
+++ b/package.json
@@ -1,62 +1,66 @@
 {
-   "name": "medialist",
-   "version": "0.1.0",
-   "private": true,
-   "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint",
-      "test": "vitest",
-      "test:migrate": "set DATABASE_PATH=tests.db && npx drizzle-kit migrate",
-      "db:gen": "drizzle-kit generate",
-      "db:migrate": "drizzle-kit migrate",
-      "db:studio": "drizzle-kit studio"
-   },
-   "dependencies": {
-      "@dnd-kit/core": "^6.1.0",
-      "@dnd-kit/sortable": "^8.0.0",
-      "@heroui/react": "2.6.14",
-      "@node-rs/argon2": "^1.8.3",
-      "@oslojs/crypto": "^1.0.1",
-      "@oslojs/encoding": "^1.1.0",
-      "@tanstack/react-query": "^5.51.11",
-      "@tanstack/react-query-devtools": "^5.51.11",
-      "better-sqlite3": "^11.7.2",
-      "busboy": "^1.6.0",
-      "drizzle-orm": "^0.38.3",
-      "framer-motion": "^11.3.8",
-      "nanoid": "^5.0.7",
-      "next": "^14.2.18",
-      "next-themes": "^0.3.0",
-      "nuqs": "^2.4.0",
-      "react": "^18",
-      "react-dom": "^18",
-      "react-hook-form": "^7.52.1",
-      "react-icons": "^5.2.1",
-      "sharp": "^0.33.4",
-      "tailwind-merge": "^2.4.0"
-   },
-   "devDependencies": {
-      "@testing-library/dom": "^10.4.0",
-      "@testing-library/react": "^16.1.0",
-      "@types/better-sqlite3": "^7.6.11",
-      "@types/busboy": "^1.5.4",
-      "@types/node": "^20",
-      "@types/react": "^18",
-      "@types/react-dom": "^18",
-      "@vitejs/plugin-react": "^4.3.4",
-      "drizzle-kit": "^0.30.4",
-      "eslint": "^8",
-      "eslint-config-next": "14.2.5",
-      "form-data": "^4.0.1",
-      "jsdom": "^25.0.1",
-      "memfs": "^4.17.0",
-      "node-mocks-http": "^1.16.2",
-      "postcss": "^8",
-      "tailwindcss": "^3.4.1",
-      "typescript": "^5",
-      "vite-tsconfig-paths": "^5.1.4",
-      "vitest": "^3.0.6"
-   }
+  "name": "medialist",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "vitest",
+    "test:migrate": "set DATABASE_PATH=tests.db && npx drizzle-kit migrate",
+    "db:gen": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
+  },
+  "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@heroui/react": "2.6.14",
+    "@node-rs/argon2": "^1.8.3",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11",
+    "better-sqlite3": "^11.7.2",
+    "busboy": "^1.6.0",
+    "drizzle-orm": "^0.38.3",
+    "framer-motion": "^11.3.8",
+    "nanoid": "^5.0.7",
+    "next": "15.1.7",
+    "next-themes": "^0.3.0",
+    "nuqs": "^2.4.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.4.0"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
+    "@types/better-sqlite3": "^7.6.11",
+    "@types/busboy": "^1.5.4",
+    "@types/node": "^20",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "drizzle-kit": "^0.30.4",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.7",
+    "form-data": "^4.0.1",
+    "jsdom": "^25.0.1",
+    "memfs": "^4.17.0",
+    "node-mocks-http": "^1.16.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.6"
+  },
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
+  }
 }
