--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@heroui/react": "2.6.14",
+    "@heroui/react": "^2.7.2",
     "@node-rs/argon2": "^1.8.3",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
@@ -25,7 +25,7 @@
     "better-sqlite3": "^11.7.2",
     "busboy": "^1.6.0",
     "drizzle-orm": "^0.38.3",
-    "framer-motion": "^11.3.8",
+    "framer-motion": "^12.4.7",
     "nanoid": "^5.0.7",
     "next": "15.1.7",
     "next-themes": "^0.3.0",
