--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "start:migrate": "npm run db:migrate && npm start",
     "lint": "next lint",
     "test": "vitest",
     "test:migrate": "set DATABASE_PATH=tests.db && npx drizzle-kit migrate",
@@ -25,6 +26,7 @@
     "better-sqlite3": "^11.7.2",
     "busboy": "^1.6.0",
     "drizzle-orm": "^0.38.3",
+    "express": "^4.21.2",
     "framer-motion": "^12.4.7",
     "nanoid": "^5.0.7",
     "next": "15.1.7",
@@ -42,6 +44,7 @@
     "@testing-library/react": "^16.1.0",
     "@types/better-sqlite3": "^7.6.11",
     "@types/busboy": "^1.5.4",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
