build: dockerize the app - update next.config for 'standalone' options - update .gitignore to gitignore the volumes - create  .dockerignore - create DockerFile & compose.yaml using next js example as a reference - create docker-run.sh as an entrypoint to handle database migration

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "vitest",
     "test:migrate": "set DATABASE_PATH=tests.db && npx drizzle-kit migrate",
     "db:gen": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
+    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
