--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # dependencies
-/node_modules
+**/node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
@@ -38,3 +38,4 @@ next-env.d.ts
 # user files
 *.db
 public/users
+volumes
