--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@tanstack/react-query-devtools": "^5.51.11",
     "better-sqlite3": "^11.7.2",
     "busboy": "^1.6.0",
-    "drizzle-kit": "^0.30.5",
+    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
     "framer-motion": "^12.4.7",
     "nanoid": "^5.0.7",
-    "next": "15.1.7",
+    "next": "^15.3.4",
     "next-themes": "^0.3.0",
     "nuqs": "^2.4.0",
     "react": "18.3.1",
